compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__called_case.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\npub fn go(x, y) {\n  case x {\n    0 -> y\n    _ -> y\n  }()\n}\n"
---
----- SOURCE CODE

pub fn go(x, y) {
  case x {
    0 -> y
    _ -> y
  }()
}


----- COMPILED JAVASCRIPT
export function go(x, y) {
  let _block;
  if (x === 0) {
    _block = y;
  } else {
    _block = y;
  }
  return _block();
}
