compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__case_building_matched_string_2.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\nimport gleam\n\npub fn go(x) {\n   case x {\n     \"a\" as a <> rest -> a <> rest\n     _ -> \"\"\n   }\n}"
---
----- SOURCE CODE

import gleam

pub fn go(x) {
   case x {
     "a" as a <> rest -> a <> rest
     _ -> ""
   }
}

----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";

export function go(x) {
  if (x.charCodeAt(0) === 97) {
    return x;
  } else {
    return "";
  }
}
